Fix: Comment Styling, Bookmarks render

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       src="https://kit.fontawesome.com/2d6cfa1461.js"
       crossorigin="anonymous"
     ></script>
-
+    <!-- kakao API cdn -->
     <script
       src="https://developers.kakao.com/sdk/js/kakao.js"
       crossorigin="anonymous"
     ></script>
 
     <!-- React entry point -->
-    <script type="module" src="./src/index.tsx" defer></script>
+    <script src="./src/index.tsx" defer></script>
   </head>
   <body>
     <div id="backdrop-root"></div>
